--- a/src/assets/scss/_pages.scss
+++ b/src/assets/scss/_pages.scss
@@ -95,6 +95,7 @@
         border-radius: 8px;
         box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
         transition: 0.3s all;
+        cursor: pointer;
         &:hover {
             box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.25);
         }
