--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,9 @@
+@import 'header';
+@import 'mainpage';
+@import 'pages';
+@import 'footer';
+@import 'form';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -28,8 +34,3 @@ body {
     margin-top: 60px;
     margin-bottom: 60px;
 }
-    
-@import 'header';
-@import 'mainpage';
-@import 'pages';
-@import 'footer';
