--- a/src/assets/scss/_pages.scss
+++ b/src/assets/scss/_pages.scss
@@ -29,7 +29,7 @@
         margin-top: 10px;
     }
     &__girl {
-        display: block;
+        max-width: 100%;
         margin: 0 auto;
     }
     &__text {
